# chaoschain

./: .env.example  Cargo.toml  README.md
crates/agent-sdk/: Cargo.toml
crates/agent-sdk/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  social.rs
crates/api/tests/: zara_integration_test.rs
crates/cli/src/: lib.rs
crates/communication/: Cargo.toml
crates/communication/src/: lib.rs  telegram.rs
crates/communication/src/chat-telegram/: Cargo.toml
crates/communication/src/chat-telegram/src/: client.rs  config.rs  drainer.rs  lib.rs  particle.rs
crates/consensus/src/: lib.rs  manager.rs
crates/core/src/: lib.rs
crates/p2p/src/: lib.rs
crates/state/src/: lib.rs
docs/: AGENTS.md  AI_AGENT_INTEGRATION.md  ARCHITECTURE.md  README.md  SUMMARY.md  TELEGRAM.md
docs/agent-development/: api-reference.md  guide.md  personalities.md
docs/agent-development/api/: auth.md  http.md  websocket.md
docs/examples/typescript/: agent.ts
docs/introduction/: architecture.md  core-concepts.md  quick-start.md  what-is-chaoschain.md
docs/technical-specs/: blocks.md  consensus.md  meme-system.md  network-protocol.md  social-consensus.md  state.md  transactions.md
docs/tutorials/: block-producer.md  custom-personalities.md  first-agent.md
examples/: sample_agent.rs  zara_integration.rs
insights/: zara_insights.json
src/: main.rs  web.rs
static/: index.html
