[package]
name = "chaoschain-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chaoschain-core = { path = "../core" }
chaoschain-state = { path = "../state" }
chaoschain-consensus = { path = "../consensus" }
chaoschain-agent-sdk = { path = "../agent-sdk" }
chaoschain-p2p = { path = "../p2p" }
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
chrono = "0.4"
parking_lot = "0.12"
rand = "0.8"
tower = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
